--- a/main/styles.css
+++ b/main/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+    --header-height: 70px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -15,47 +19,97 @@ body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #ffffff;
+    background-color: #5A3A12;
     grid-template: "header" "header"
                      "hero" "hero"
                      "main" "main"
                    "footer" "footer";
 }
+
 header {
     display: flex;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
     gap: 1rem;
     flex-wrap: wrap;
-    background-color: #333;
+    background-color: #33333357;
     color: #fff;
     padding: 1rem;
     text-align: center;
-    padding: 1rem;
 }
 
 .about_us, .pictures, .prices, .location {
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
-    background-color: #555;
-    color: #fff;
-    border: none;
+    background-color: #3A240Ba9;
+    color: #ffffff;
+    border: 1px solid #D4A437;
+    border-radius: 90px;
     padding: 0.5rem 1rem;
     cursor: pointer;
     font-size: 1rem;
 }
 
-img {
-    max-width: 100%;
+hero {
+    display: block;
+}
+
+hero img {
+    width: 100%;
     height: auto;
+}
+
+.about_us_section{
+    text-align: center;
+    background-color: #33333357;
+    color: #ffffff;
+    border: 1px solid #D4A437;
+    border-radius: 10px;
+    padding: 0.5rem 1rem;
+    margin: 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+/*!! BUG: barbers cards don't size correctly*/
+.barber_1, .barber_2, .barber_3 {
+    background-color: #33333385;
+    padding: 1rem;
+    border-radius: 10px;
+    border: 1px solid #D4A437;
+}
+
+.barbershop_pictures {
     display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.barbers{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    text-align: center;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    align-items: center;
+}
+
+.barbers img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
     text-align: center;
-    padding: 1rem 0;
+    padding: 1rem;
 }
-
